# llm-scratch

./: .gitignore  README.md  pyproject.toml
artifacts/tokenizer/: merges.txt  tokenizer_config.json  vocab.json
artifacts/tokenizer_optim/: merges.txt  tokenizer_config.json  vocab.json
artifacts/tokenizer_optim1/: merges.txt  tokenizer_config.json  vocab.json
model/: attention.py  embedding.py  ffn.py  linear.py  loss.py  norm.py  optimizer.py  rope.py  transformer.py
src/tokenizer/: train.py
tokenizer/: test.py  tokenizer.py  train.py
